# grayifypdf

./: CMakeLists.txt  README.md  fillpolestest.cxx  greyifypdf  main.cxx
src/: CMakeLists.txt  fillpoles.cxx  fillpoles.hxx  fillpolestest.cxx  main.cxx
